android: fix sdkmanager license issues
In android-build-wrapper.sh:
- Always create the folder 'licenses'
- Export 'SDKMANAGER_OPTS'

Fixes a recent failure of the Android CI build
where 'licenses/android-sdk-license' was no found
after the 'yes | ...' call.

Signed-off-by: Lubomir I. Ivanov <neolit123@gmail.com>